# krakenhll

./: .gitignore  CMakeLists.txt
scripts/: krakenuniq  read_merger.pl
src/: Makefile  classify.cpp  hyperloglogplus.cpp  hyperloglogplus.hpp  kraken_headers.hpp  krakendb.cpp  krakendb.hpp  krakenutil.cpp  krakenutil.hpp  merge_hll.cpp  query_taxdb.cpp  quickfile.cpp  readcounts.hpp  taxdb.hpp  test_hll_serialize.cpp
